fix: remove overflow-x on .gv

--- a/public/scss/scoped.scss
+++ b/public/scss/scoped.scss
@@ -201,7 +201,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   word-spacing: 0.0625rem;
-  overflow-x: hidden !important;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: column;
